# Scientific-Deposit-Credit-Calculator

./: Makefile  README.md
SmartCalc_v2/: CMakeLists.txt  main.cpp  manual.tex
SmartCalc_v2/controller/: controller.cpp  controller.h
SmartCalc_v2/model/: model.h
SmartCalc_v2/model/credit_calc/: credit.cpp  credit.h
SmartCalc_v2/model/deposit_calc/: deposit.cpp  deposit.h
SmartCalc_v2/model/smart_calc/: calculator.cpp  calculator.h
SmartCalc_v2/view/: view.cpp  view.h  view.ui
tests/: test_calculator.cpp  test_credit.cpp  test_deposit.cpp  tests_entry.h
